<resources>
    <string name="app_name">iWallcraft- 4K,HD,AI Wallpaper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="onesignal_app_id">19eeada7-213e-4bdf-8b00-2ee82a829382</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="applovin_id">FBZJ_9VAbH95a0MVJsIldv-Twlc8JBmTNKtNTMX3eh9DhVk_M0k-viWpS7ymJiJg1A2VXaZAGiOyC6yT6gX0N2</string>

    <string name="privacy_policy_url">https://www.your.com/privacyurl</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=YOUR+PLAY+URL</string>

    <!-- true if want to use RTL else false -->
    <string name="isRTL">false</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="categories">Categories</string>
    <string name="live_wallpapers">Live Wallpapers</string>
    <string name="favourite">Favourite</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="moreapp">More App</string>
    <string name="menu_about">About</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading">Loading..</string>
    <string name="portrait_wallpaper">Portrait Wallpaper</string>
    <string name="view_all">View All</string>
    <string name="no_data_found">No Data Found</string>
    <string name="mostviewed">Most Viewed</string>
    <string name="square_wallpaper">Square Wallpaper</string>
    <string name="amazing_wall">Amazing Wallpapers in your way</string>
    <string name="title_activity_wallpaper">Wallpaper</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="download">Download</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="ratings">Ratings</string>
    <string name="tags">Tags</string>
    <string name="details">Details</string>
    <string name="downloading_wallpaper">Downloading Wallpaper..</string>
    <string name="please_wait">Please Wait..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="share_wallpaper">Share Wallpaper</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_already_saved">Wallpaper Already Saved</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>
    <string name="set_wallpaper">Set As</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="internet_not_connected">Please connect to internet</string>
    <string name="server_no_conn">Server not connected</string>
    <string name="downloads">Downloads</string>
    <string name="live_wall_saved">Live Wallpaper saved</string>
    <string name="live_wall_already_saved">Live Wallpaper already saved</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="downloading_live_wall">Downloading Live Wallpaper</string>
    <string name="enter_rating">Please enter rating</string>
    <string name="download_path">Download Path</string>
    <string name="get_more_wall">Get more amazing wallpapers, download now</string>
    <string name="get_more_live_wall">Get more amazing Live Wallpapers, download now</string>
    <string name="rate_this_wall">Rate this Wallpaper</string>
    <string name="rate_this_live_wall">Rate this Live Wallpaper</string>
    <string name="crop">Crop</string>
    <string name="dashboard">Dashboard</string>
    <string name="landscape_wallpaper">Landscape Wallpaper</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="select_wall_type">Select Wallpaper Type</string>
    <string name="ok">OK</string>
    <string name="rated">Rated</string>
    <string name="popular">Popular</string>
    <string name="save">Save</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="rate_wall">How likely do you to recommend this app to your friends?</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
    <string name="err_set_wall">Error when setting wallpaper</string>

    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="dnt_have_acc">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="login_success">Login Successful</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="already_acc">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="not_log">Not Logged In</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="min">min</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="invalid_user">Invalid User</string>
    <string name="update_prof_succ">Profile Updated Successfully</string>
    <string name="image">Image</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="latest_wallpaper">Latest Wallpapers</string>
    <string name="report_wall_">Report Wallpaper:-</string>
    <string name="report_message">Enter your report here</string>
    <string name="enter_report">Enter your report message</string>
    <string name="report_live_wall_">Report Live Wallpaper:-</string>
    <string name="toggle_wall_type">Toggle Wallpaper Type</string>
    <string name="click_chage_landscape">\nClick button to change wallpaper type to Landscape</string>
    <string name="click_chage_portrait">\nClick button to change wallpaper type to Portrait</string>
    <string name="click_chage_square">\nClick button to change wallpaper type to Square</string>
    <string name="go">GO</string>
    <string name="login_fb">Facebook</string>
    <string name="login_google">Google</string>
    <string name="error_login_goole">Error while login with google</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="select_image">Select Image</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_your_account">Log in to Your Account</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="maybe_later">May be Later</string>
    <string name="color">Color</string>
    <string name="clear">Clear</string>
    <string name="personal_information">Personal Information</string>
    <string name="report">Report</string>
    <string name="featured">Featured</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="most_rated">Most Rated</string>
    <string name="most_downloaded">Most Downloaded</string>
    <string name="allow_noti_per">Allow Permission from app setting page</string>
    <string name="noti_permissions">Notification Permission</string>
    <string name="allow">Allow</string>
    <string name="needs_permissions">Please allow notification permission to receive notification for latest updates</string>

    <string name="facebook_app_id">xxxxxxxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">fbxxxxxxxxxxxxxxxxxx</string>
</resources>