<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_add_playlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/bg">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_wall_"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/text_black"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/tv2"
        android:layout_width="60dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        app:riv_corner_radius="2dp"
        android:background="@drawable/bg_gradient_round"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="@+id/tv1"/>

    <EditText
        android:id="@+id/et_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_desc"
        android:textSize="15sp"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="5"
        android:padding="15dp"
        android:gravity="top"
        android:background="@drawable/bg_edittext_report"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_report_submit"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/bg_gradient_curve"
        app:backgroundTint="@null"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_report" />


</androidx.constraintlayout.widget.ConstraintLayout>