<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_add_playlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/bg">

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_wall"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/text_title"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rb_add"
        style="@style/RatingBar_Wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:max="5"
        android:numStars="5"
        android:layout_marginTop="10dp"
        android:theme="@style/RatingBar_Wall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_later_rating"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/maybe_later"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button_cancel"
        app:backgroundTint="@null"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_submit_rating"
        app:layout_constraintTop_toBottomOf="@+id/rb_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_rating"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_gradient_curve"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_later_rating"
        app:layout_constraintTop_toTopOf="@+id/button_later_rating"
        app:layout_constraintBottom_toBottomOf="@+id/button_later_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>