<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.amazia_iwallcraft.utils.StatusBarView
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grt_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_proedit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_grt_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/edit_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:background="@drawable/bg_gradient_top_curve">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp">

                <View
                    android:id="@+id/view1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_stroke_cricle_gradient"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user"
                    app:riv_border_color="@color/bg_pro_pic"
                    app:riv_border_width="5dp"
                    app:riv_corner_radius="60dp"
                    app:layout_constraintTop_toTopOf="@+id/view1"
                    app:layout_constraintStart_toStartOf="@+id/view1"
                    app:layout_constraintEnd_toEndOf="@+id/view1"
                    app:layout_constraintBottom_toBottomOf="@+id/view1" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add_prof"
                    android:layout_marginEnd="-10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_profile"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/personal_information"
                android:textSize="16sp"
                android:textColor="@color/text_desc"
                android:fontFamily="@font/montserrat_semi_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="12sp"
                android:textColor="@color/text_desc"
                android:fontFamily="@font/montserrat_regular" />

            <EditText
                android:id="@+id/editText_profedit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:background="@drawable/bg_border_curve"
                android:theme="@style/TextLabel_GREY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email"
                android:textSize="12sp"
                android:textColor="@color/text_desc"
                android:fontFamily="@font/montserrat_regular"  />

            <EditText
                android:id="@+id/editText_profedit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:background="@drawable/bg_border_curve"
                android:theme="@style/TextLabel_GREY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password"
                android:textSize="12sp"
                android:textColor="@color/text_desc"
                android:fontFamily="@font/montserrat_regular"  />

            <EditText
                android:id="@+id/editText_profedit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:background="@drawable/bg_border_curve"
                android:theme="@style/TextLabel_GREY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cpassword"
                android:textSize="12sp"
                android:textColor="@color/text_desc"
                android:fontFamily="@font/montserrat_regular"  />

            <EditText
                android:id="@+id/editText_profedit_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:background="@drawable/bg_border_curve"
                android:theme="@style/TextLabel_GREY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/phone"
                android:textSize="12sp"
                android:textColor="@color/text_desc"
                android:fontFamily="@font/montserrat_regular"  />

            <EditText
                android:id="@+id/editText_profedit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                android:background="@drawable/bg_border_curve"
                android:theme="@style/TextLabel_GREY" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_prof_update"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:background="@drawable/bg_gradient_curve"
                android:fontFamily="@font/montserrat_semi_bold" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>